# RUST_embedded_yet

./: README.md
assignment_3/: .gitignore  Cargo.toml
assignment_3/interface/: stlink-v2-1.cfg
assignment_3/src/: main.rs
assignment_4/: Cargo.toml  README.md
assignment_4/src/: main.rs
guessing_game/: Cargo.toml  README.md
guessing_game/src/: main.rs
