[package]
authors = ["Robin Jonsson"]
categories = ["embedded", "no-std"]
description = "Assignment 4"
keywords = ["arm", "cortex-m"]
name = "assigment_4b"
version = "0.1.0"

[dependencies]
cortex-m = "0.3.0"
cortex-m-semihosting = "0.2.0"

[dependencies.cortex-m-rt]
features = ["abort-on-panic"]
version = "0.3.3"

[profile.release]
debug = true
lto = true
